--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,8 @@
 
       <div class="result">
         <p class="lead">Result</p>
-        <img src="http://localhost:4000/video/bxuOxOImn5I" alt="Animated GIF from a Vine video"/>
-        <p class="urls">Vine: <a href="https://vine.co/v/bxuOxOImn5I">https://vine.co/v/bxuOxOImn5I</a> – GVine: <a href="http://gvine.co/v/bxuOxOImn5I">http://gine.co/v/bxuOxOImn5I</a></p>
+        <img src="/gif/bxuOxOImn5I" alt="Animated GIF from a Vine video"/>
+        <p class="urls">Vine: <a href="https://vine.co/v/bxuOxOImn5I">https://vine.co/v/bxuOxOImn5I</a> – GVine: <a href="/v/bxuOxOImn5I">http://gvine.co/v/bxuOxOImn5I</a></p>
       </div>
 
       <hr>
